# voice-activated-microbit

./: .dockerignore  .ei-block-config  .gitignore  CMakeLists.txt  Dockerfile  README.md  build-and-upload.sh  build.sh  codal.json  docker-build.sh  libraries.zip33 MB Zip33 MB — Click to download.desktop  module.json  upload.sh
build-dependencies/: install_gcc_arm9.sh
libraries/codal-core/: .gitignore  CMakeLists.txt
libraries/codal-core/inc/core/: CodalCompat.h  CodalComponent.h  CodalConfig.h  CodalDevice.h  CodalDmesg.h  CodalFiber.h  CodalHeapAllocator.h  CodalListener.h  CodalUtil.h  ErrorNo.h  EventModel.h  MemberFunctionCallback.h  NotifyEvents.h  codal_target_hal.h
libraries/codal-core/inc/driver-models/: AbstractButton.h  Accelerometer.h  CodalUSB.h  Compass.h  DMASingleWireSerial.h  Display.h  Gyroscope.h  I2C.h  LowLevelTimer.h  NVMController.h  Pin.h  Radio.h  SPI.h  ScreenIO.h  Sensor.h  Serial.h  SingleWireSerial.h  Timer.h
libraries/codal-core/inc/drivers/: AnalogSensor.h  AnimatedDisplay.h  AsciiKeyMap.h  Button.h  FAT.h  FXOS8700.h  GhostFAT.h  HID.h  HIDJoystick.h  HIDKeyboard.h  HIDMouse.h  ILI9341.h  KeyMap.h  KeyValueStorage.h  LEDMatrix.h  LIS3DH.h  LSM303Accelerometer.h  LSM303Magnetometer.h  LinearAnalogSensor.h  MAG3110.h  MMA8453.h  MMA8653.h  MPU6050.h  MessageBus.h  MultiButton.h  NonLinearAnalogSensor.h  PearsonHash.h  PulseIn.h  SPIScreenIO.h  ST7735.h  StandardSPIFlash.h  TouchButton.h  TouchSensor.h  USBMSC.h  USBMassStorageClass.h  USB_HID_Keys.h  uf2format.h
libraries/codal-core/inc/streams/: DataStream.h  LevelDetector.h  LevelDetectorSPL.h  MemorySource.h  Mixer.h  StreamNormalizer.h  Synthesizer.h
libraries/codal-core/inc/types/: BitmapFont.h  CoordinateSystem.h  Event.h  Image.h  ManagedBuffer.h  ManagedString.h  ManagedType.h  Matrix4.h  RefCounted.h
libraries/codal-core/source/core/: CodalCompat.cpp  CodalComponent.cpp  CodalDevice.cpp  CodalDmesg.cpp  CodalFiber.cpp  CodalHeapAllocator.cpp  CodalListener.cpp  CodalUtil.cpp  MemberFunctionCallback.cpp  codal_default_target_hal.cpp
libraries/codal-core/source/driver-models/: AbstractButton.cpp  Accelerometer.cpp  CodalUSB.cpp  Compass.cpp  Display.cpp  Gyroscope.cpp  I2C.cpp  SPI.cpp  Sensor.cpp  Serial.cpp  Timer.cpp
libraries/codal-core/source/drivers/: AnalogSensor.cpp  AnimatedDisplay.cpp  AsciiKeyMap.cpp  Button.cpp  FXOS8700.cpp  GhostFAT.cpp  HID.cpp  HIDJoystick.cpp  HIDKeyboard.cpp  HIDMouse.cpp  ILI9341.cpp  KeyValueStorage.cpp  LEDMatrix.cpp  LIS3DH.cpp  LSM303Accelerometer.cpp  LSM303Magnetometer.cpp  LinearAnalogSensor.cpp  MAG3110.cpp  MMA8653.cpp  MPU6050.cpp  MessageBus.cpp  MultiButton.cpp  NonLinearAnalogSensor.cpp  PearsonHash.cpp  PulseIn.cpp  ST7735.cpp  ScreenIO.cpp  StandardSPIFlash.cpp  TouchButton.cpp  TouchSensor.cpp  USBMSC.cpp
libraries/codal-core/source/streams/: DataStream.cpp  LevelDetector.cpp  LevelDetectorSPL.cpp  MemorySource.cpp  Mixer.cpp  StreamNormalizer.cpp  Synthesizer.cpp
libraries/codal-core/source/types/: BitmapFont.cpp  CoordinateSystem.cpp  Event.cpp  Image.cpp  ManagedBuffer.cpp  ManagedString.cpp  Matrix4.cpp  RefCounted.cpp  RefCountedInit.cpp
libraries/codal-microbit-nrf5sdk/: .gitignore  CMakeLists.txt  LICENCE.txt  README.md  module.json
libraries/codal-microbit-nrf5sdk/nRF5SDK/components/ble/ble_services/ble_dfu/: ble_dfu.c  ble_dfu.h
libraries/codal-microbit-nrf5sdk/nRF5SDK/components/ble/common/: ble_advdata.c  ble_conn_params.c  ble_conn_state.c  ble_conn_state.h
libraries/codal-microbit-nrf5sdk/nRF5SDK/components/ble/nrf_ble_gatt/: nrf_ble_gatt.c
libraries/codal-microbit-nrf5sdk/nRF5SDK/components/ble/peer_manager/: gatt_cache_manager.c  id_manager.c  peer_data_storage.c  peer_data_storage.h  peer_database.c  peer_manager.c  peer_manager.h  peer_manager_handler.c  peer_manager_handler.h  peer_manager_types.h  pm_buffer.c  security_dispatcher.c  security_manager.c  security_manager.h
libraries/codal-microbit-nrf5sdk/nRF5SDK/components/libraries/fds/: fds.c  fds.h
libraries/codal-microbit-nrf5sdk/nRF5SDK/components/libraries/pwr_mgmt/: nrf_pwr_mgmt.h
libraries/codal-microbit-nrf5sdk/nRF5SDK/components/softdevice/common/: nrf_sdh_ble.c
libraries/codal-microbit-nrf5sdk/nRF5SDK_mods/: app_timer2.c
libraries/codal-microbit-nrf5sdk/sdk_config/: sdk_config.h
libraries/codal-microbit-v2/inc/bluetooth/: MicroBitLEDService.h
libraries/codal-nrf52/: .gitmodules  CMakeLists.txt
libraries/codal-nrf52/inc/: NRF52ADC.h  NRF52I2C.h  NRF52PDM.h  NRF52PWM.h  NRF52Pin.h  NRF52Radio.h  NRF52RadioDatagram.h  NRF52RadioEvent.h  NRF52SPI.h  NRF52Serial.h  NRF52TouchSensor.h  NRFLowLevelTimer.h  WS2812B.h  ZSingleWireSerial.h  neopixel.h  nrfx_glue.h  peripheral_alloc.h
libraries/codal-nrf52/inc/cmsis/: cmsis_nvic.h
libraries/codal-nrf52/source/: NRF52ADC.cpp  NRF52I2C.cpp  NRF52PDM.cpp  NRF52PWM.cpp  NRF52Pin.cpp  NRF52Radio.cpp  NRF52RadioDatagram.cpp  NRF52RadioEvent.cpp  NRF52SPI.cpp  NRF52Serial.cpp  NRF52TouchSensor.cpp  NRFLowLevelTimer.cpp  WS2812B.cpp  ZSingleWireSerial.cpp  codal_target_hal_base.cpp  neopixel.cpp  peripheral_alloc.cpp
source/: AccelerometerInferenceTest.cpp  ButtonTest.cpp  ContinuousAudioStreamer.cpp  ContinuousAudioStreamer.h  MicrophoneInferenceTest.cpp  MicrophoneTest.cpp  SerialStreamer.cpp  SerialStreamer.h  Tests.h  main.cpp
source/edge-impulse-sdk/classifier/: ei_classifier_config.h  ei_run_classifier.h
source/edge-impulse-sdk/dsp/: config.hpp  numpy.hpp
source/edge-impulse-sdk/porting/arduino/: debug_log.cpp
source/edge-impulse-sdk/porting/microbit/: ei_classifier_porting.cpp
source/model-parameters/: anomaly_clusters.h  dsp_blocks.h  model_metadata.h
source/porting/microbit/: debug_log.cpp  ei_classifier_porting.cpp
source/tflite-model/: trained_model_compiled.cpp  trained_model_compiled.h
